--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <!--Link CSS file.-->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!--Put logo onto browser tab-->
     <link rel="shortcut icon" type="image/x-icon" href="/Images/favicon.ico">
