--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 
     <!--Link CSS file.-->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!--Put logo onto browser tab-->
-    <link rel="shortcut icon" type="image/x-icon" href="/Images/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="Images/favicon.ico">
 
 </head>
 <body>
@@ -27,8 +27,8 @@
         <nav class="navbar">
             <div class="logo">
                 <!--When logo is clicked on, return to main page.-->
-                <a href="/index.html">
-                    <img src="/Images/logo.png" alt="logo">
+                <a href="index.html">
+                    <img src="Images/logo.png" alt="logo">
                 </a>
             </div>
 
@@ -36,14 +36,14 @@
             <div class="main_menu">
                 <ul>
                     <li>
-                        <a href="/Leaderboard/leaderboard.html">Leaderboard</a>
+                        <a href="Leaderboard/leaderboard.html">Leaderboard</a>
                     </li>
                 </ul>
             </div>
 
             <!--Button to redirect to sign in page.-->
             <div class="signin">
-                <button><a href="/SignIn/signin.html">Sign in &rarr;</a></button>
+                <button><a href="SignIn/signin.html">Sign in &rarr;</a></button>
             </div>
         </nav>
     </div>
@@ -58,7 +58,7 @@
     <!--Display the games in rows.-->
     <div class="container">
         <div class="gametile row">
-            <a href="/RPS/rps.html">
+            <a href="RPS/rps.html">
                 <figure>
                     <img src="Images/rps_tile.jpeg" alt="Rock paper scissors game tile."/>
                     <figcaption>Rock Paper Scissors</figcaption>
