--- a/Hangman/hangman.html
+++ b/Hangman/hangman.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="hangman.css">
 
     <!--Link JavaScript files.-->
-    <script type="module" src="hangman.js" defer></script>
-    <script src="words.js"></script> <!--Contains list of possible words to guess.-->
+    <script type="module" src="./hangman.js" defer></script>
+    <script src="./words.js"></script> <!--Contains list of possible words to guess.-->
 
     <!--Put logo onto browser tab-->
     <link rel="shortcut icon" type="image/x-icon" href="../Images/favicon.ico">
