--- a/SignIn/signin.html
+++ b/SignIn/signin.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 
     <!--Put logo onto browser tab-->
-    <link rel="shortcut icon" type="image/x-icon" href="/Images/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../Images/favicon.ico">
 
     <!--Sign in user using supabase authentication.-->
     <script type="module">
-        import { supabase } from '/helper.js';
+        import { supabase } from '../helper.js';
 
         window.signIn = async function signIn() {
             const email = document.getElementById('email').value;
@@ -27,7 +27,7 @@
                 console.error("Error signing in:", error.message);
             } else {
                 console.log("Sign in successful!");
-                window.location.href = "/SignIn/signedIn.html";
+                window.location.href = "./signedIn.html";
             }
         };
     </script>
@@ -37,9 +37,9 @@
     <!--Have logo on top of game page.-->
     <div class="heading">
         <!--When logo is clicked on, return to main page.-->
-        <a href="/index.html">
+        <a href="../index.html">
             <h1>MiniPlay</h1>
-            <img src="/SignIn/Images/logo.png" alt="logo">
+            <img src="./Images/logo.png" alt="logo">
         </a>
     </div>
 
@@ -51,7 +51,7 @@
         </form>
 
         <button onclick="signIn()">Sign In</button>
-        <p2>Don't have an account? <a href="/SignIn/signup.html">Sign Up</a></p2> <!--Redirect user to sign up page.-->
+        <p2>Don't have an account? <a href="./signup.html">Sign Up</a></p2> <!--Redirect user to sign up page.-->
     </div>
 </body>
 
