--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 <This is the index.html file for MiniPlay that renders the mainpage of the game.>
-    Copyright (C) <year>  <name of author>
+    Copyright (C) <2025>  <Jessica Webb and Lea Karsanbhai>
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
