--- a/RPS/rps.html
+++ b/RPS/rps.html
@@ -1,5 +1,5 @@
 <!--
-<This is the index.html file for MiniPlay that renders format of the game Rock Paper Scissors.>
+<This is the rps.html file for MiniPlay that renders format of the game rock paper scissors.>
     Copyright (C) <2025>  <Jessica Webb and Lea Karsanbhai>
 
     This program is free software: you can redistribute it and/or modify
