--- a/SignIn/signedIn.html
+++ b/SignIn/signedIn.html
@@ -1,5 +1,5 @@
 <!--
-<This is the index.html file for MiniPlay that renders format of the main page for signed in users.>
+<This is the signedIn.html file for MiniPlay that renders format of the main page for signed in users.>
     Copyright (C) <2025>  <Jessica Webb and Lea Karsanbhai>
 
     This program is free software: you can redistribute it and/or modify
