--- a/SignIn/signin.html
+++ b/SignIn/signin.html
@@ -1,5 +1,5 @@
 <!--
-<This is the index.html file for MiniPlay that renders format of the sign in page.>
+<This is the signin.html file for MiniPlay that renders format of the sign in page.>
     Copyright (C) <2025>  <Jessica Webb and Lea Karsanbhai>
 
     This program is free software: you can redistribute it and/or modify
