--- a/SignIn/signup.html
+++ b/SignIn/signup.html
@@ -1,5 +1,5 @@
 <!--
-<This is the index.html file for MiniPlay that renders format of the signup page.>
+<This is the signup.html file for MiniPlay that renders format of the signup page.>
     Copyright (C) <2025>  <Jessica Webb and Lea Karsanbhai>
 
     This program is free software: you can redistribute it and/or modify
