--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -1,5 +1,5 @@
 <!--
-<This is the index.html file for MiniPlay that renders format of the game Tic-Tac-Toe.>
+<This is the tictactoe.html file for MiniPlay that renders format of the game Tic-Tac-Toe.>
     Copyright (C) <2025>  <Jessica Webb and Lea Karsanbhai>
 
     This program is free software: you can redistribute it and/or modify
