--- a/SignIn/signup.html
+++ b/SignIn/signup.html
@@ -21,7 +21,7 @@
 <meta charset="UTF-8">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./SignIn/MPSignStyle.css"> 
+    <link rel="stylesheet" href="./MPSignStyle.css"> 
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -101,7 +101,7 @@
     <!--Have logo on top of game page.-->
     <div class="heading">
         <!--When logo is clicked on, return to main page.-->
-        <a href="/index.html">
+        <a href="../index.html">
             <h1>MiniPlay</h1>
             <img src="./Images/logo.png" alt="logo">
         </a>
