--- a/SignIn/signup.html
+++ b/SignIn/signup.html
@@ -19,9 +19,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="MPSignStyle.css"> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./MPSignStyle.css"> 
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
