--- a/SignIn/signup.html
+++ b/SignIn/signup.html
@@ -100,7 +100,7 @@
             } else {
                 console.log("Sign up successful!");
                 addScore(username, 0);
-                window.location.href = "/SignIn/signedIn.html";
+                window.location.href = "./signedIn.html";
             }
         };
     </script>
