--- a/SignIn/signup.html
+++ b/SignIn/signup.html
@@ -96,7 +96,7 @@
             if (error) {
                 console.error("Error signing up:", error.message);
                 alert(error.message);
-                location.reload();
+                return;
             } else {
                 console.log("Sign up successful!");
                 addScore(username, 0);
