--- a/RPS/rps.html
+++ b/RPS/rps.html
@@ -74,7 +74,7 @@
 
 	<!-- Choice and Points display -->
         <div class="choices-container">
-            <h3 class="user-choice">Your Choice: <span id="user-choice"></span></h3>
+            <h3 class="user-choice">your Choice: <span id="user-choice"></span></h3>
             <h3 class="computer-choice">Computer Choice: <span id="computer-choice"></span></h3>
         </div>
 
